@@ -1,3 +1,7 @@
+2010-06-13  Steffen Kamper  <info@sk-typo3.de>
+
+	* Fixed bug #14538: Icons missing in page tree for "Page contains" pages (Thanks to Steffen Ritter)
+
 2010-06-13  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Raised DBAL version from 1.1.6 to 1.1.7
